[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/art/enemy/beast/Beast.png" type="Texture" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]
[ext_resource path="res://assets/art/hud/LifeBarMiniUnder.png" type="Texture" id=3]
[ext_resource path="res://assets/art/hud/RedLifeBarMiniProgress.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "move_down",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "move_left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "move_up",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "move_right",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 11.9901

[node name="Mob" type="KinematicBody2D" groups=[
"mobs",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 17 )
animation = "idle_down"

[node name="HealthBarContainer" type="VBoxContainer" parent="."]
margin_left = -13.5
margin_top = -22.0
margin_right = 4.5
margin_bottom = -18.0
rect_scale = Vector2( 1.5, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HealthBarContainer"]
margin_right = 18.0
margin_bottom = 4.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="ProyectileAreaDetection" type="Area2D" parent="."]
gravity = 0.0
monitorable = false
collision_layer = 2147483648
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProyectileAreaDetection"]
shape = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )
[connection signal="body_entered" from="ProyectileAreaDetection" to="." method="_on_Area2D_body_entered" flags=3]
